<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.github.persiliao</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2026.1.1</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>io.github.persiliao</groupId>
    <artifactId>mqtt-spring-boot-starter</artifactId>
    <version>3.1.0</version>

    <name>Mqtt Spring Boot Starter</name>
    <description>Feature-rich, enterprise-grade MQTT client Spring Boot Starter with auto-configuration</description>
    <url>https://github.com/persiliao/mqtt-spring-boot-starter</url>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>persiliao</id>
            <name>Persi.Liao</name>
            <email>xiangchu.liao@gmail.com</email>
            <organization>persiliao</organization>
            <organizationUrl>https://github.com/persiliao</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/persiliao/mqtt-spring-boot-starter.git</connection>
        <developerConnection>scm:git:https://github.com/persiliao/mqtt-spring-boot-starter.git</developerConnection>
        <url>https://github.com/persiliao/mqtt-spring-boot-starter</url>
    </scm>

    <properties>
        <!--
          Compile to Java 8 bytecode (class file version 52) so this starter can be
          consumed from Java 8 projects (e.g. Spring Boot 2.x). This only fixes the
          bytecode level; it does NOT pin the Spring Boot version (that stays
          overridable via ${spring-boot.version} inherited from the parent), so the
          same artifact serves both Spring Boot 2.x and 3.x.
        -->
        <maven.compiler.release>8</maven.compiler.release>
        <hivemq.version>1.3.13</hivemq.version>
        <jetbrains.annotations.version>13.0</jetbrains.annotations.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-autoconfigure</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
            <optional>true</optional>
        </dependency>
        <!-- HiveMQ MQTT Client -->
        <dependency>
            <groupId>com.hivemq</groupId>
            <artifactId>hivemq-mqtt-client</artifactId>
            <version>${hivemq.version}</version>
        </dependency>
        <!-- For @Async support -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-aop</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>${jetbrains.annotations.version}</version>
        </dependency>
    </dependencies>
</project>
